# oso-aarch64

./: Dockerfile  Dockerfile.amazonlinux  Dockerfile.debian  PKG-INFO  README.md  build.sh  django_oso-0.27.1-py3-none-any.whl  oso-0.27.0-py3-none-any.whl  pyproject.toml
oso-0.27.0/: .pdm-python  PKG-INFO  pyproject.toml
