[build-system]
requires = ["hatchling >= 1.13.0"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.sdist]
# limit which files are included in the sdist (.tar.gz) asset,
# see https://github.com/pydantic/pydantic/pull/4542
# include = [
#     '../../../README.md',
#     '/HISTORY.md',
#     '/Makefile',
#     '/pydantic',
#     '/tests',
#     '/requirements',
# ]

[project]
name = "oso"
version = "0.27.0"
description = "Oso aarch64"
authors = [
    {name = "Adil Naimi", email = "adilnaimi@gmail.com"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

