[build-system]
requires = [
    "pdm-backend",
]
build-backend = "pdm.backend"

[tool.hatch.build.targets.sdist]
include = [
    "../../../README.md",
    "/HISTORY.md",
    "/Makefile",
    "/pydantic",
    "/tests",
    "/requirements",
]

[project]
name = "oso"
version = "0.27.0"
description = "Oso"
authors = [
    { name = "Adil Naimi", email = "adilnaimi@gmail.com" },
]
dependencies = [
    "cffi~=1.15",
    "dataclasses; python_version < \"3.7\"",
]
requires-python = ">=3.12"
readme = "README.md"

[project.license]
text = "MIT"
